<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#25bdf3"
    tools:context="com.thanh.claimmanager.controller.LoginController">

    <LinearLayout
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/login_logo_gallagher" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/login_logo_two" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="12pt" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="#90ffffff"
            android:textSize="8pt" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#90ffffff"
            android:textSize="8pt" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            card_view:cardBackgroundColor="#0d9afd"
            card_view:cardCornerRadius="1dp"
            card_view:cardElevation="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="5dp"
                android:text="@string/signin"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="1dp"
            card_view:cardElevation="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="5dp"
                android:text="@string/help_register"
                android:textAllCaps="true"
                android:textColor="#949494" />

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <ImageView
        android:layout_width="155dp"
        android:layout_height="33dp"
        android:layout_gravity="bottom|center_horizontal"
        android:src="@drawable/login_logo" />
</FrameLayout>
