<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:fitsSystemWindows="true"
    tools:context="com.thanh.claimmanager.view.HomeView">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingRight="60dp">

        <FrameLayout
            android:layout_width="72dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/form_people" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvWork"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="#1892251 Tesco vs Jane Doe"
                android:textColor="#7eba13"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Witness Statement Form"
                android:textColor="#7eba13"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#d5d5d5" />
    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        fab:menu_animationDelayPerItem="0"
        fab:menu_colorNormal="#08b0ef"
        fab:menu_colorPressed="#0d9afd"
        fab:menu_colorRipple="#08b0ef"
        fab:menu_labels_hideAnimation="@anim/jump_to_down"
        fab:menu_labels_showAnimation="@anim/jump_from_down"
        fab:menu_labels_style="@style/MenuLabelsStyle"
        fab:menu_shadowColor="#90444444">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab12"
            style="@style/MenuButtonsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_add_white_18dp"
            fab:fab_label="@string/add_contact" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab22"
            style="@style/MenuButtonsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message_white_18dp"
            fab:fab_label="@string/open_case" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab32"
            style="@style/MenuButtonsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dialpad_white_18dp"
            fab:fab_label="@string/call" />

    </com.github.clans.fab.FloatingActionMenu>
</android.support.design.widget.CoordinatorLayout>
