<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/drawer_background_header"
            android:gravity="top"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/drawer_avartar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="John Smith"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                android:textSize="9pt" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Gallagher Bassett, NM Assessor."
                    android:textColor="@android:color/white"
                    android:textSize="7pt" />

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="7dp"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/drawer_dropdown" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/drawer_logo_gallagher" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/drawer_logo_twolegal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#dcdcdc" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:src="@drawable/drawer_time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="72dp"
                android:gravity="center_vertical"
                android:text="@string/notifications"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical|right"
                android:text="+17"
                android:textColor="@android:color/holo_red_light"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:src="@drawable/drawer_myaccount" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="72dp"
                android:gravity="center_vertical"
                android:text="@string/my_account"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical|right"
                android:text="+17"
                android:textColor="@android:color/holo_red_light"
                android:textStyle="bold"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:src="@drawable/drawer_setting" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="72dp"
                android:gravity="center_vertical"
                android:text="@string/settings"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical|right"
                android:text="+17"
                android:textColor="@android:color/holo_red_light"
                android:textStyle="bold"
                android:visibility="gone" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#dcdcdc" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:src="@drawable/drawer_support" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="72dp"
                android:gravity="center_vertical"
                android:text="@string/support"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical|right"
                android:text="+17"
                android:textColor="@android:color/holo_red_light"
                android:textStyle="bold"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:src="@drawable/drawer_setting"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="72dp"
                android:gravity="center_vertical"
                android:text="@string/about_feedback"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical|right"
                android:text="+17"
                android:textColor="@android:color/holo_red_light"
                android:textStyle="bold"
                android:visibility="gone" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#dcdcdc" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="96dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:src="@drawable/drawer_logout" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="72dp"
                android:gravity="center_vertical"
                android:text="@string/logout"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical|right"
                android:src="@drawable/drawer_logo_tablet_lawyer" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>
